--- a/src/main/webapp/WEB-INF/jsp/common/header.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/header.jspf
@@ -1,75 +1,42 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
 
 <!DOCTYPE html>
 <html>
 	<head>
 		<title><c:out value="${pageTitle}"/></title>
-		<script src="http://cdn.jsdelivr.net/jquery.validation/1.15.0/jquery.validate.min.js"></script>
-		<script src="http://cdn.jsdelivr.net/jquery.validation/1.15.0/additional-methods.js "></script>
-		<script src="https://cdn.jsdelivr.net/jquery.timeago/1.4.1/jquery.timeago.min.js"></script>
+		<c:url var="newCustomerUrl" value="/newCustomer"/>
+		<c:url var="customerListUrl" value="/customerSearchForm"/>
+		<c:url var="cssUrl" value="/css/style.css"/>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<c:url var="cssHref" value="/css/main.css" />
-		<link rel="stylesheet" type="text/css" href="${cssHref}">
-		
-		<script type="text/javascript">
-			$(document).ready(function() {
-				$("time.timeago").timeago();
-				
-				$("#logoutLink").click(function(event){
-					$("#logoutForm").submit();
-				});
-				
-				var pathname = window.location.pathname;
-				$("nav a[href='"+pathname+"']").parent().addClass("active");
-				
-			});
-			
-			
-		</script>
-		
-	</head>
+		<link rel="stylesheet" href="${cssUrl}">
+		<c:url var="scriptUrl" value="/script.js"/>
+		<script type="text/javascript" src="${scriptUrl}"></script>
+		</head>
 	<body>
-		<header>
-			<c:url var="homePageHref" value="/" />
-			<c:url var="imgSrc" value="/img/placeholder.png" />
-			<a href="${homePageHref}"><img src="${imgSrc}" class="img-responsive" /></a>
-		</header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
-				<ul class="nav navbar-nav">
-					<c:url var="homePageHref" value="/" />
-					<li><a href="${homePageHref}">Home</a></li>
-					<c:if test="${not empty currentUser}">
-						<c:url var="dashboardHref" value="/users/${currentUser}" />
-						<li><a href="${dashboardHref}">Private Messages</a></li>
-						<c:url var="newMessageHref" value="/users/${currentUser}/messages/new" />
-						<li><a href="${newMessageHref}">New Message</a></li>
-						<c:url var="sentMessagesHref" value="/users/${currentUser}/messages" />
-						<li><a href="${sentMessagesHref}">Sent Messages</a></li>
-						<c:url var="changePasswordHref" value="/users/${currentUser}/changePassword" />
-						<li><a href="${changePasswordHref}">Change Password</a></li>
-					</c:if>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<c:choose>
-						<c:when test="${empty currentUser}">
-							<c:url var="newUserHref" value="/users/new" />
-							<li><a href="${newUserHref}">Sign Up</a></li>
-							<c:url var="loginHref" value="/login" />
-							<li><a href="${loginHref}">Log In</a></li>
-						</c:when>
-						<c:otherwise>
-							<c:url var="logoutAction" value="/logout" />
-							<form id="logoutForm" action="${logoutAction}" method="POST">
-							<input type="hidden" name="CSRF_TOKEN" value="${CSRF_TOKEN}"/>
-							</form>
-							<li><a id="logoutLink" href="#">Log Out</a></li>
-						</c:otherwise>
-					</c:choose>
-				</ul>
+	<div class="container">
+	
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	  <a class="navbar-brand" href="#">WillSell</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNav">
+	    <ul class="navbar-nav">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="${newCustomerUrl}">Add New Customer <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="${customerListUrl}">View Customer Data</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Reporting</a>
+	      </li>
+	    </ul>
+	  </div>
+	</nav>
+	
+	<c:if test="${message != null}">
+			<div class="alert alert-success" role="alert">
+				<c:out value="${message}"/>
 			</div>
-		</nav>
-		<c:if test="${not empty currentUser}">
-			<p id="currentUser">Current User: ${currentUser}</p>
-		</c:if>		
-		<div class="container">
+		</c:if>	
