--- a/src/main/webapp/WEB-INF/jsp/common/header.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/header.jspf
@@ -4,16 +4,14 @@
 <html>
 	<head>
 		<title><c:out value="${pageTitle}"/></title>
-		<c:url var="cssUrl" value="/css/main.css"/>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
         <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.0/jquery.validate.min.js"></script>
         <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.0/additional-methods.js "></script>
         <script src="https://cdn.jsdelivr.net/jquery.timeago/1.4.1/jquery.timeago.min.js"></script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <c:url var="cssUrl" value="/css/main.css"/>
         <link rel="stylesheet" href="${cssUrl}">
 		<c:url var="scriptUrl" value="/js/custom-scripts.js"/>
 		<script type="text/javascript" src="${scriptUrl}"></script>
@@ -55,11 +53,11 @@
 	      </li>
 	    </ul>
           </c:if>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav">
               <c:choose>
                   <c:when test="${empty currentUser}">
                       <c:url var="newUserHref" value="/users/new" />
-                      <li class="nav-item"><a class="nav-link" href="${newUserHref}">Sign Up</a></li>
+                      <li class="nav-item"><a class="nav-link" href="${newUserHref}">New User</a></li>
                       <c:url var="loginHref" value="/login" />
                       <li class="nav-item"><a class="nav-link" href="${loginHref}">Log In</a></li>
                   </c:when>
